package Negocio;

public enum CategoriaDePrenda {
    PARTESUPERIOR,
    PARTEINFERIOR,
    CALZADO,
    ACCESORIO
}
