package Negocio;

public class Color {
    Integer rojo, verde, azul;

    public Color(int rojo, int verde, int azul){
        this.rojo = rojo;
        this.verde = verde;
        this.azul = azul;
    }
}
