package Negocio;

public enum Material {
    ALGODON,
    JEAN,
    PIQUE,
    ACETATO,
    LONA,
    TELA,
    CUERO;
}
