package Negocio;

public interface Sastre {
    Prenda fabricarPrendaSuperior();
    Prenda fabricarPrendaInferior();
    Prenda fabricarCalzado();
}
